# Tabular-Data-Synthesis-legacy-not-used-anymore-

./: .gitignore  Azure Pipeline.ipynb  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
src/tabular_synthesis/: classifier_sample.py  classifier_train.py  classifier_train_azure.py  classifier_train_local.py  image_sample_azure.py  image_train.py  image_train_azure.py  main.py  main_diffusion.py  quick_evaluation_azure.py  sampling testing area.py
src/tabular_synthesis/data/config/: adult.json  mini_adult.json
src/tabular_synthesis/model/: ctabgan.py
src/tabular_synthesis/synthesizer/loading/: tabular_dataset.py  tabular_loader.py  util.py
src/tabular_synthesis/synthesizer/loading/sampling/: conditional_vector.py  sampler.py
src/tabular_synthesis/synthesizer/loading/transform/: data_preparation.py  transformer.py
src/tabular_synthesis/synthesizer/model/: ctabgan.py
src/tabular_synthesis/synthesizer/model/guided_diffusion/: README.md  gaussian_diffusion.py  script_util.py  train_util.py
src/tabular_synthesis/synthesizer/model/improved_diffusion/: README.md  gaussian_diffusion.py  script_util.py  train_util.py  unet.py
src/tabular_synthesis/synthesizer/model/synthesizer/: ctabgan_synthesizer.py
tests/: test_tabular_loader.py
tests/data/real_datasets/adult/: mini_adult.csv
