[metadata]
name = tabular_synthesis
description = A package for tabular synthesis
author = Sven Groen
license = MIT
version = 0.0.0
long_description = file: README.md
platforms = windows
classifiers =
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",

[options]
packages = tabular_synthesis
install_requires=
    numpy==1.21.0
    torch>=1.9.1
    pandas==1.2.4
    scikit-learn==0.24.1
    scipy>=1.4.1
    blobfile==2.0.0

python_requires = >=3.6
package_dir =
    =src
zip_safe = no


[options.extras_require]
testing=
    pytest>=6.0
    pytest-cov>=2.0
    flake8>=3.9


[options.package_data]
tabular_synthesis = py.typed

[flake8]
max-line-length = 160